Correct readability of character component

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   border: none;
 }
 .MainPage {
-  background: linear-gradient( rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0) ), url('./images/mainPageBackground.png');
+  background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0)), url('./images/mainPageBackground.png');
   background-size: cover;
   background-position: bottom;
   height: 100vh;
@@ -33,11 +33,10 @@
 }
 .Character {
   position: relative;
-  background: #141414;
-  -webkit-box-shadow: 6px -6px 44px 14px rgba(29,29,29,0.82); 
-  box-shadow: 6px -6px 44px 14px rgba(29,29,29,0.82);
+  background: #202020;
+  -webkit-box-shadow: 6px -6px 44px 14px rgba(85, 85, 85, 0.82); 
+  box-shadow: 6px -6px 44px 14px rgba(85, 85, 85, 0.82);
 }
-
 /* medium and bigger screen sizes */
 @media (min-width: 768px) {
   .MainText {
@@ -60,18 +59,19 @@
   }
   .Name {
     position: absolute;
-    top: .5rem;
+    /* top: .5rem; */
+    top: -50px;
     left: 0;
     width: 100%;
     height: 1px;
     opacity: 0;
-    
   }
   .Avatar {
     transition: transform .5s ease-out;
   }
   .Avatar:hover{
-    transform: scale(.8);
+    transform: scale(.9);
+    filter: brightness(.5);
   }
   /* Displays avatar animation and shows name at the same time */
   .Avatar:hover + .Name{
